# excel-mcp-server

./: CHANGELOG.md  README.md  TOOLS.md  excel-mcp-server-0.1.8.mcpb  iheldan-excel-mcp-0.2.0.mcpb  manifest.json  pyproject.toml  sheetforge-mcp-0.2.1.mcpb  sheetforge-mcp-0.3.0.mcpb  sheetforge-mcp-0.3.1.mcpb  sheetforge-mcp-0.4.0.mcpb  sheetforge-mcp-0.4.1.mcpb  sheetforge-mcp-0.5.0.mcpb  sheetforge-mcp-0.6.1.mcpb  sheetforge-mcp-0.8.0.mcpb
.github/workflows/: ci.yml  publish.yml  release-build.yml
docs/: index.html
docs/notes/: 2026-04-08-v0.3.0-release-notes.md
src/excel_mcp/: __init__.py  __main__.py  calculations.py  chart.py  data.py  formatting.py  pivot.py  query.py  server.py  sheet.py  tables.py  validation.py  workbook.py
tests/: test_agent_workflows.py  test_chart.py  test_chartsheet_guards.py  test_data.py  test_formatting.py  test_formula_tools.py  test_layout.py  test_pivot.py  test_query.py  test_resource_safety.py  test_tables.py  test_workbook.py
