[project]
name = "iheldan-excel-mcp"
version = "0.2.0"
description = "IHeldan's MCP server for reading, writing, and reshaping Excel workbooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "openpyxl>=3.1.5",
    "typer>=0.16.0"
]
[[project.authors]]
name = "iHeldan"

[project.scripts]
iheldan-excel-mcp = "excel_mcp.__main__:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]

[tool.hatch.build]
packages = ["src/excel_mcp"]
