[project]
name = "sheetforge-mcp"
version = "0.3.1"
description = "SheetForge MCP for reading, writing, and reshaping Excel workbooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "openpyxl>=3.1.5",
    "typer>=0.16.0"
]
[[project.authors]]
name = "SheetForge"

[project.scripts]
sheetforge-mcp = "excel_mcp.__main__:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]

[tool.hatch.build]
packages = ["src/excel_mcp"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
